  * BATCH has been splitted into two options: BATCHNORM which allows, by using
    -b, to use the -a normalize in all the files at once, and NOGAP, that by
    using -g, introduces the lame's --nogap extension.
  * Added replygain using the appropiate tags with Ogg/Vorbis and Ogg/FLAC.
  * Replaygain is an action, not a flag, since it can be performed individualy
    in the chain of events.

 -- Jesus Climent <jesus.climent@hispalinux.es>  Fri,  7 Oct 2005 00:59:07 +0300

abcde (2.3.4-1) unstable; urgency=low

  * Some patches from Tom Spindler <dogcow () babymeat ! com>
    - Added some quoting to the md5sum checkings, since the variables could be
      null.
    - NetBSD bits to use ftp instead on anything else to fetch stuff.
  * do_playlist needs to convert the OUTPUT to the CONTAINERS to avoid ending
    with playlists pointing to .vorbis files (Closes: #326487).

 -- Jesus Climent <jesus.climent@hispalinux.es>  Sat,  3 Sep 2005 16:50:07 +0300

abcde (2.3.3-1) unstable; urgency=low

  * Rips done in a single track were getting tagged as Various. Corrected.
  * Possibly eliminated some bashisms from using a variable as a variable
    (Closes: #324399). Thanks to A Costa.

 -- Jesus Climent <jesus.climent@hispalinux.es>  Fri, 26 Aug 2005 01:36:35 +0300

abcde (2.3.2-1) unstable; urgency=low

  * Too fast... I forgot to make the tarball and change the version strings in
    several places. Fixed.

 -- Jesus Climent <jesus.climent@hispalinux.es>  Fri, 19 Aug 2005 00:44:37 +0300

abcde (2.3.1-1) unstable; urgency=low

  * The new "I knew there were going to be bugs" upstream release!
  * MKCUE needs to be passed some $CDROM as an option, or otherwise it will
    not read the CDROM, in case is not /dev/cdrom.
  * Also, make the CUEREADER a bit more general, since we might be using other
    CUE extractors.

 -- Jesus Climent <jesus.climent@hispalinux.es>  Thu, 18 Aug 2005 23:44:20 +0300

abcde (2.3.0-1) unstable; urgency=low

  * New upstream release!